--- a/_posts/2023-10-31-github.io 페이지 만들기 시작.md
+++ b/_posts/2023-10-31-github.io 페이지 만들기 시작.md
@@ -1,3 +1,14 @@
+---
+title: github.io 페이지 만들기 1
+date: YYYY-MM-DD HH:MM:SS +09:00
+categories: [github.io, 실패]
+tags: [
+    github.io,
+    실패
+]
+---
+
+
 드디어 성공했다...
 ================
 
