--- a/_posts/2023-10-31-github.io 페이지 만들기 시작.md
+++ b/_posts/2023-10-31-github.io 페이지 만들기 시작.md
@@ -20,13 +20,13 @@ tags: [
 # 1. 시작하게 된 계기
 ## 1.1 저장소
 &nbsp;지금까지 계속 이것저것 공부는 해 보겠다고 수박 겉핥기는 많이 해본 것 같은데 생각해 보니 결국 다른걸 공부하면 머리속에서 거의 없어졌다는 것을 꺠닫고 기록을 하기로 했다.
-## 1.2 어떻 보관소가 좋을까
-&nbsp;보관소로 사용하기에 어디가 좋을까 찾아보던 중 github.io 페이지를 직접 만들어서 블로그 처럼 쓸 수 있다는 이야기를 듣고 일단 몸으로 부딛혀 보기로 하였다.
-# 2. 시작부터 돌이..
+## 1.2 어떤 보관소가 좋을까
+&nbsp;보관소로 사용하기에 무엇이 좋을까 찾아보던 중 github.io 페이지를 직접 만들어서 블로그 처럼 쓸 수 있다는 이야기를 듣고 일단 몸으로 부딛혀 보기로 하였다.
+# 2. 시작부터 문제가..
 ## 2.1 사전준비의 필요성
-&nbsp;위에서 말했듯 나는 일단 인터넷에서 간단하게 찾은 것을 기반으로 바로 시도를 해 보기로 하였다. 처음 시작은 [**Supermemi**](https://supermemi.tistory.com/entry/%EB%82%98%EB%A7%8C%EC%9D%98-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%A7%8C%EB%93%A4%EA%B8%B0-Git-hub-blog-GitHubio)님의 tistory를 기반으로 시작했었다. 그리고 가장 기초적인 단계인 git clone 명령어를 치는 순간 바로 git을 사용할 수 없다는 응답을 받고 말았다. 사실 지금까지 git hub 라는 것을 사용해 본 적이 없기에 첫걸음 부터 문제에 봉착하였다.
+&nbsp;위에서 말했듯 나는 일단 인터넷에서 간단하게 찾은 것을 기반으로 바로 시도를 해 보기로 하였다. 처음 시작은 [**Supermemi**](https://supermemi.tistory.com/entry/%EB%82%98%EB%A7%8C%EC%9D%98-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%A7%8C%EB%93%A4%EA%B8%B0-Git-hub-blog-GitHubio)님의 tistory를 기반으로 시작했었다. 그리고 가장 기초적인 단계인 git clone 명령어를 치는 순간 바로 git을 사용할 수 없다는 응답을 받고 말았다. 사실 지금까지 github 라는 것을 사용해 본 적이 없기에 첫걸음 부터 문제에 봉착하였다.
 ## 2.2 1차 맨붕
-&nbsp;그래도 다행히 git clone을 해결하는 방법은 인터넷에 치면 아주 간단히 나왔다. 그런데... 얼마 전 NLP(자연어처리)를 하고 있던 나는 vscode에서 venv를 켠 상태로 git clone을 치고 음... 일단 명령어는 실행이 되었는데 분명 파일이 생겨야 하거늘 좌측 탐색기는 텅 빈체 남겨져있었다. 그래도 다행히 금방 깨닫고 다시 처음부터 이번에는 제대로 git clone을 성공하였다.
+&nbsp;그래도 다행히 git clone을 해결하는 방법은 인터넷에 치면 아주 간단히 나왔다. 그런데... 얼마 전 NLP(자연어처리)를 하고 있던 나는 vscode에서 venv를 켠 상태로 git clone을 치고 음... 일단 명령어는 실행이 되었는데 분명 파일이 생겨야 하거늘 좌측 탐색기는 텅 빈 채 남겨져있었다. 그래도 다행히 금방 깨닫고 다시 처음부터 이번에는 제대로 git clone을 성공하였다.
 # 3. 드디어 1차 관문은 넘었나?
 ## 3.1 내 슬픈 예감과 Jekyll과의 첫 만남
 &nbsp; 이제 Jekyll이라는 친구와 만남을 가질 때이다.
@@ -34,7 +34,7 @@ tags: [
 gem install bundler
 gem install sekyll
 ```
-를 터미널에 실행해서 jekyll을 다운로드 하여라! 는 무슨... 또다시 오류가 생기고 말았다. gem은 실행가능 명령어가 아니라나.. 뭐라나...<br/>
+를 터미널에 실행해서 jekyll을 다운로드 하여라! 는 무슨... 또다시 오류가 생기고 말았다.&nbsp;gem은 실행가능 명령어가 아니라나.. 뭐라나...<br/>
 &nbsp; 이번에는 바로 구글링을 하였고 아 RUBY를 깔아야 한다는 이야기를 찾고 바로 다운 후 명령어를 실행하였다. 드디어! jekyll이라는 친구와 만날 수 있게 되었다!
 이제 
 ```shell
