--- a/_posts/2023-10-31-Markdown 저장소.md
+++ b/_posts/2023-10-31-Markdown 저장소.md
@@ -1,4 +1,23 @@
-\========= = 제목<br/>
-\--------- = 부제<br/>
-\<br/> = 줄바꿈
+---
+title: markdown 저장
+date: YYYY-MM-DD HH:MM:SS +09:00
+categories: [마크다운, markdown]
+tags: [
+    markdown,
+    업데이트중
+]
+---
+<br/>
 
+# 마크다운 사용하는거 저장소
+
+* \========= = 제목<br/>
+* \--------- = 부제<br/>
+* \<br/> = 줄바꿈<br/>
+* \# 1 = 주 표시<br/>
+* \## 1 = 부표시<br/>
+* \### 1 = 부부표시 등등<br/>
+* \&nbsp; = 한 칸 띄우기<br/>
+* \`````` = 코드 입력 1<br/>
+* \<pre>\<code>\</code>\</pre> 코드입력 2<br/>
+* \[**쓰고싶은 글**](https://hydejack.com/) = url 넣기(**좌우에 넣기)<br/>
