--- a/_posts/2023-10-31-Markdown 저장소.md
+++ b/_posts/2023-10-31-Markdown 저장소.md
@@ -2,9 +2,7 @@
 title: markdown 저장
 date: YYYY-MM-DD HH:MM:SS +09:00
 categories: [마크다운, markdown]
-tags: [
-    markdown,
-]
+tags: [markdown]
 ---
 <br/>
 
