--- a/_posts/2023-10-31-github.io 페이지 만들기 시작.md
+++ b/_posts/2023-10-31-github.io 페이지 만들기 시작.md
@@ -2,10 +2,7 @@
 title: github.io 페이지 만들기 1
 date: YYYY-MM-DD HH:MM:SS +09:00
 categories: [github.io, 실패]
-tags: [
-    github.io,
-    실패
-]s
+tags: [github.io]
 ---
 
 
