--- a/_posts/2023-11-01-Markdown-저장소.md
+++ b/_posts/2023-11-01-Markdown-저장소.md
@@ -15,6 +15,9 @@ tags: [markdown]
 * \## 1 = 부표시<br/>
 * \### 1 = 부부표시 등등<br/>
 * \&nbsp; = 한 칸 띄우기<br/>
-* \`````` = 코드 입력 1<br/>
-* \<pre>\<code>\</code>\</pre> 코드입력 2<br/>
-* \[**쓰고싶은 글**](https://hydejack.com/) = url 넣기(**좌우에 넣기)<br/>
+* \`````` = 코드 입력 1<bsr/>
+* \<pre>\<code>\</code>\</pre> 코드입력 2<br/><br/>
+* \[**쓰고싶은 글**](https://naver.com) = url 넣기(**좌우에 넣기)<br/><br/>
+* \```
+* 여기에 title:, date:, categories:, tags: 넣을 수 있음
+* \```
