--- a/_posts/2023-10-31-코드-테스트.md
+++ b/_posts/2023-10-31-코드-테스트.md
@@ -1,3 +1,11 @@
+---
+title: 코드 테스트
+date: YYYY-MM-DD HH:MM:SS +09:00
+categories: [마크다운, markdown]
+tags: [markdown]
+pin: true
+---
+
 코드 입력 테스트  <br/>
 아래는 자연어 처리 토큰화 후에 토큰에 아이디 부여하는 작업
 <pre>
