--- a/_posts/2023-11-05-github.io-페이지-만들기2-성공기.md
+++ b/_posts/2023-11-05-github.io-페이지-만들기2-성공기.md
@@ -58,5 +58,6 @@ $ gem install bundler
 &nbsp;여기서 이제 중요한 것이 나온다. Owner는 계정을 만들었으면 본인의 이름일 테니 바꾸지 말고, 그 옆에 Repository name 라고 쓰여있는 부분에 이제 본인의 github 주소 "github_username.github.io" 로 쓰면 된다. <br/>&nbsp;예를 들어 지금 이 블로그 같은 경우에는 "oil-ramp-cat.github.io"이다.<br/>
 &nbsp;그 후 맨 아래 내려가서 create repository를 눌러 만들어주자.
 ## 2.2 Git clone하기
-&nbsp;아까 우리는 쉽게 하기 위해서 github desktop 프로그램을 깔았었다.
-![github desktop](../assets/img/post/github%20desktop%20icon.png)
+&nbsp;아까 우리는 쉽게 하기 위해서 github desktop 프로그램을 깔았었다.<br/>
+![github desktop](../assets/img/post/github%20desktop%20icon.png)<br/>
+&nbsp;이제 쉽게 git clone을 해보자
