--- a/_posts/2023-11-05-github.io-페이지-만들기2-성공기.md
+++ b/_posts/2023-11-05-github.io-페이지-만들기2-성공기.md
@@ -60,4 +60,25 @@ $ gem install bundler
 ## 2.2 Git clone하기
 &nbsp;아까 우리는 쉽게 하기 위해서 github desktop 프로그램을 깔았었다.<br/>
 ![github desktop](../assets/img/post/github%20desktop%20icon.png)<br/>
-&nbsp;이제 쉽게 git clone을 해보자
+&nbsp;이제 쉽게 git clone을 해보자.<br/>
+![git desktop normal](../assets/img/post/github%20desktop%20normal%20page.png)<br/>
+&nbsp; 처음 생성하면 위 사진과 조금 많이 다를 것이다. 하지만 우리가 봐야할 것은 위에 보이는 'File'이다.<br/>
+![git desktop file](../assets/img/post/github%20desktop%20file.png)<br/>
+&nbsp; 여기 보이는 'Clone Repository' 버튼을 눌러서 원하는 위치에 빈 폴더 안에 clone 한다. 그럼 이제 clone 성공!
+
+## 2.3 Jekyll 사이트 생성
+&nbsp;지금까지 문제없이 수행했다면 위에서 생성한 repository가 clone 되어 로컬 폴더 안에 저장되어있을 것이다. <br/>
+&nbsp;이제 커맨드 창을 열어 빈 폴더로 이동한다.<br/>
+<details>
+  <summary>혹시나 나처럼 어떻게 폴더 이동하는지 모르겠는 사람들을 위한 설명</summary><br/>
+  &nbsp;일단은 cmd 기준이다.<br/><br/>
+  &nbsp;나 같은 경우에는 로컬 폴더를 D폴더에 저장하였는데 cmd로는 C폴더로 열려 어떻게 하는지 찾아보다 알게 되었다.<br/s>
+  ```shell
+  C:\Users\raen0>
+  ```<br/>
+  &nbsp;일단 키게되면 C폴더에 있게 된다. 이 때
+  ```shell
+  & D:
+  ``` <br/>
+  이라는 명령어만을 사용하여 
+  </summary>
