--- a/_posts/2023-11-05-github.io-페이지-만들기2-성공기.md
+++ b/_posts/2023-11-05-github.io-페이지-만들기2-성공기.md
@@ -15,12 +15,12 @@ pin: true
 &nbsp;어떤 텍스트 에디터를 사용해도 좋으나 나는 지금까지 써봤던 것중 [vscode](https://code.visualstudio.com/){:target="_blank"}가 가장 마음에 들기에 이것을 사용하기로 하였다.<br/>
 ## 1.2 git hub 회원가입하기.
 &nbsp; [github](https://github.com/)에 로그인하기(없으면 회원가입).<br/>
-![github](assets/img/post/github.png)
+![github](img\post\ruby.png)
 <br/>&nbsp;그 후 찾아보니 나중에 post를 명령어로 직접 쳐서 git에 올리는 방법도 있었지만 초보인 나는 github 프로그램을 깔아서 하기로 결정.
 [github desktop](https://desktop.github.com/)
 ## 1.3 Ruby 설치하기
 &nbsp; 우리는 블로그 사이트를 만들기 위해서 Jekyll을 사용할 것인데 이 때 Ruby를 먼저 설치 해 놓아야 사용 할 수 있다. [Ruby](https://rubyinstaller.org/downloads/)<br/>
-![ruby](assets/img/post/ruby.png)<br/>
+![ruby](img/post/ruby.png)<br/>
 &nbsp;이 사이트에 들어가 보면 다운을 할 수 있는데 오른쪽에 써있길 "wich version to download?" 아래 문구를 보면 진하게 "우리는 지금 Ruby+Devkit x.x.x (x64)를 추천하고 있다." 라고 쓰여있을 것이니 그것ㄴ을 다운받으면 된다. <br/>
 (현 시점에서는  Ruby+Devkit 3.2.X (x64))<br/>
 &nbsp; 설치를 시작하면 Licencse Agreement 라는 문구가 보일 텐데 당연히 accept를 선택해 준 뒤 전부 Next를 누르면 된다.<br/>
@@ -52,18 +52,18 @@ $ gem install bundler
 
 ## 2.1 Github repository 만들기
 &nbsp; 처음에 만들었던 github 사이트에 로그인을 해보자. 그럼 다음과 같은 화면을 볼 수 있을 것이다. (나는 기본 desktop mode가 dark 라서 어두운 색이고 다른 사람들은 흰색일 수도 있다.)
-![github](assets/img/post/github.png)
+![github](img/post/github.png)
 이 화면에서 누가봐도 초록색으로 나를 눌러줘요! 라고 하는 버튼이 보인다. 그럼 이제 다음과 같은 화면을 볼 수 있을 것이다.
-![repository](assets/img/post/repository1.png) <br/>
+![repository](img/post/repository1.png) <br/>
 &nbsp;여기서 이제 중요한 것이 나온다. Owner는 계정을 만들었으면 본인의 이름일 테니 바꾸지 말고, 그 옆에 Repository name 라고 쓰여있는 부분에 이제 본인의 github 주소 "github_username.github.io" 로 쓰면 된다. <br/>&nbsp;예를 들어 지금 이 블로그 같은 경우에는 "oil-ramp-cat.github.io"이다.<br/>
 &nbsp;그 후 맨 아래 내려가서 create repository를 눌러 만들어주자.
 ## 2.2 Git clone하기
 &nbsp;아까 우리는 쉽게 하기 위해서 github desktop 프로그램을 깔았었다.<br/>
-![github desktop](assets/img/post/github%20desktop%20icon.png)<br/>
+![github desktop](img/post/github%20desktop%20icon.png)<br/>
 &nbsp;이제 쉽게 git clone을 해보자.<br/>
-![git desktop normal](assets/img/post/github%20desktop%20normal%20page.png)<br/>
+![git desktop normal](img/post/github%20desktop%20normal%20page.png)<br/>
 &nbsp; 처음 생성하면 위 사진과 조금 많이 다를 것이다. 하지만 우리가 봐야할 것은 위에 보이는 'File'이다.<br/>
-![git desktop file](assets/img/post/github%20desktop%20file.png)<br/>
+![git desktop file](img/post/github%20desktop%20file.png)<br/>
 &nbsp; 여기 보이는 'Clone Repository' 버튼을 눌러서 원하는 위치에 빈 폴더 안에 clone 한다. 그럼 이제 clone 성공!
 
 ## 2.3 Jekyll 사이트 생성
@@ -82,3 +82,5 @@ $ gem install bundler
   ``` <br/>
   이라는 명령어만을 사용하여 바로 D 폴더로 옮길 수 있고 cd "주소"를 입력해 가려던 로컬 폴더로 이동할 수 있다.
   </summary>
+<br/>
+&nbsp; git clone을
