--- a/_posts/2023-11-05-github.io-페이지-만들기2-성공기.md
+++ b/_posts/2023-11-05-github.io-페이지-만들기2-성공기.md
@@ -52,18 +52,18 @@ $ gem install bundler
 
 ## 2.1 Github repository 만들기
 &nbsp; 처음에 만들었던 github 사이트에 로그인을 해보자. 그럼 다음과 같은 화면을 볼 수 있을 것이다. (나는 기본 desktop mode가 dark 라서 어두운 색이고 다른 사람들은 흰색일 수도 있다.)
-![github](img/post/github.png)
+![github](./img/post/github.png)
 이 화면에서 누가봐도 초록색으로 나를 눌러줘요! 라고 하는 버튼이 보인다. 그럼 이제 다음과 같은 화면을 볼 수 있을 것이다.
-![repository](img/post/repository1.png) <br/>
+![repository](./img/post/repository1.png) <br/>
 &nbsp;여기서 이제 중요한 것이 나온다. Owner는 계정을 만들었으면 본인의 이름일 테니 바꾸지 말고, 그 옆에 Repository name 라고 쓰여있는 부분에 이제 본인의 github 주소 "github_username.github.io" 로 쓰면 된다. <br/>&nbsp;예를 들어 지금 이 블로그 같은 경우에는 "oil-ramp-cat.github.io"이다.<br/>
 &nbsp;그 후 맨 아래 내려가서 create repository를 눌러 만들어주자.
 ## 2.2 Git clone하기
 &nbsp;아까 우리는 쉽게 하기 위해서 github desktop 프로그램을 깔았었다.<br/>
-![github desktop](img/post/github%20desktop%20icon.png)<br/>
+![github desktop](./img/post/github%20desktop%20icon.png)<br/>
 &nbsp;이제 쉽게 git clone을 해보자.<br/>
-![git desktop normal](img/post/github%20desktop%20normal%20page.png)<br/>
+![git desktop normal](./img/post/github%20desktop%20normal%20page.png)<br/>
 &nbsp; 처음 생성하면 위 사진과 조금 많이 다를 것이다. 하지만 우리가 봐야할 것은 위에 보이는 'File'이다.<br/>
-![git desktop file](img/post/github%20desktop%20file.png)<br/>
+![git desktop file](./img/post/github%20desktop%20file.png)<br/>
 &nbsp; 여기 보이는 'Clone Repository' 버튼을 눌러서 원하는 위치에 빈 폴더 안에 clone 한다. 그럼 이제 clone 성공!
 
 ## 2.3 Jekyll 사이트 생성
@@ -82,5 +82,6 @@ $ gem install bundler
   ``` <br/>
   이라는 명령어만을 사용하여 바로 D 폴더로 옮길 수 있고 cd "주소"를 입력해 가려던 로컬 폴더로 이동할 수 있다.
   </summary>
+</details>
 <br/>
-&nbsp; git clone을
+&nbsp; git clone을성공하였다면
