--- a/_posts/2023-11-05-github.io-페이지-만들기2-성공기.md
+++ b/_posts/2023-11-05-github.io-페이지-만들기2-성공기.md
@@ -73,16 +73,46 @@ $ gem install bundler
 <details>
   <summary>혹시나 나처럼 어떻게 폴더 이동하는지 모르겠는 사람들을 위한 설명</summary><br/>
   &nbsp;일단은 cmd 기준이다.<br/><br/>
-  &nbsp;나 같은 경우에는 로컬 폴더를 D폴더에 저장하였는데 cmd로는 C폴더로 열려 어떻게 하는지 찾아보다 알게 되었다.<br/s>
+  &nbsp;나 같은 경우에는 로컬 폴더를 D폴더에 저장하였는데 cmd로는 C폴더로 열려 어떻게 하는지 찾아보다 알게 되었다.<br/>
+
   ```shell
   C:\Users\raen0>
-  ```<br/>
+  ```
+  <br/>
   &nbsp;일단 키게되면 C폴더에 있게 된다. 이 때
+
   ```shell
   & D:
-  ``` <br/>
+  ``` 
+  
+  <br/>
   이라는 명령어만을 사용하여 바로 D 폴더로 옮길 수 있고 cd "주소"를 입력해 가려던 로컬 폴더로 이동할 수 있다.
   </summary>
 </details>
 <br/>
-&nbsp; git clone을성공하였다면
+&nbsp; git clone을성공하였다면 아래 명령어를 입력하여 Jekyll 사이트를 생성해 보자. 이 때 폴더 안에 reame.txt파일이 있을 수 있으니 확인해 보자.<br/>
+
+```shell
+$ jekyll new ./
+```
+<br/>
+&nbsp;그 후 bundle을 설치하고 업데이트 한다.<br/>&nbsp;간혹 update이후 문제가 생길 때도 있어 Bundle 업데이트 이후, install 을 다시 실행해 준다.<br/>
+
+```shell
+$ bundle install
+$ bundle update
+$ bundle install
+```
+<br/>
+&nbsp;모두 잘 설치되었는지 확인을 위해 vscode로 폴더에 들어간 다음 아래 명령어를 입력하여 실행시켜 본다.<br/>
+
+```shell
+$ bundle exec jekyll serves
+```
+
+<br/>&nbsp;잠시후 아래와 같은 문구가 뜨는 것을 볼 수 있고 [http://127.0.0.1:4000/](http://127.0.0.1:4000/)에 접속하여 Welcome to Jekyll! 이라는 문구가 표시된다면 일단 기본 설정은 완료한 것입니다!<br/>
+![jekyll exec](https://github.com/oil-ramp-cat/oil-ramp-cat.github.io/assets/103806022/0bc96b8b-7429-463b-8ce9-2404d40b1f8d)
+
+## 야옹야옹
+&nbsp;마침내 github.io에서 자신만의 사이트를 만들기 위한 첫걸음을 떌 수 있게 되었습니다.<br/>
+&nbsp;아직 페이지를 작성하지는 못하였지만 첫발을 내딛었다는 성취감이 있었달까요? 다음번에는 테마까지 정해서 끝을 향해 달려보도록 하죠!
