--- a/_posts/2023-11-05-github.io-페이지-만들기2-성공기.md
+++ b/_posts/2023-11-05-github.io-페이지-만들기2-성공기.md
@@ -45,8 +45,8 @@ $ gem install bundler
 ```
 &nbsp; 이번에도 다음 커맨드를 입력하여 잘 설치되었는지 확인을 하자.
 ```shell
-& jekyll -v
-& bundler -v
+$ jekyll -v
+$ bundler -v
 ```
 &nbsp;이제 준비단계는 끝이 났고 github를 들어가 사이트 만들기를 시작해 보자.
 
@@ -76,18 +76,17 @@ $ gem install bundler
   &nbsp;나 같은 경우에는 로컬 폴더를 D폴더에 저장하였는데 cmd로는 C폴더로 열려 어떻게 하는지 찾아보다 알게 되었다.<br/>
 
   ```shell
-  C:\Users\raen0>
+  $ C:\Users\raen0>
   ```
   <br/>
-  &nbsp;일단 키게되면 C폴더에 있게 된다. 이 때
+  &nbsp;일단 키게되면 C폴더에 있게 된다. 이 때<br/>
 
   ```shell
-  & D:
+  $ D:
   ``` 
   
   <br/>
   이라는 명령어만을 사용하여 바로 D 폴더로 옮길 수 있고 cd "주소"를 입력해 가려던 로컬 폴더로 이동할 수 있다.
-  </summary>
 </details>
 <br/>
 &nbsp; git clone을성공하였다면 아래 명령어를 입력하여 Jekyll 사이트를 생성해 보자. 이 때 폴더 안에 reame.txt파일이 있을 수 있으니 확인해 보자.<br/>
