--- a/_posts/2023-11-08-자연어처리-크롤링-준비.md
+++ b/_posts/2023-11-08-자연어처리-크롤링-준비.md
@@ -1,5 +1,5 @@
 ---
-title: markdown 저장
+title: 자연어처리 데이터 준비
 date: 2023-11-08 10:54:00 +09:00
 categories: [자연어 처리 준비, 크롤링]
 tags: [natural language process, crawling, NLP]
