--- a/_posts/2023-11-08-자연어처리-크롤링-준비.md
+++ b/_posts/2023-11-08-자연어처리-크롤링-준비.md
@@ -31,11 +31,11 @@ pin: true
 
 &nbsp;아래 코드는 내가 심심풀이로 만들어본 이미지 다운로더이다. 하지만 텀프로젝트를 할 때에는 글을 긁어와야한다.
 
-<details>
-    <summary>이미지 다운로더 py</summary>
+<details markdown="1">
+<summary>이미지 다운로더 py</summary>
+<div markdown="1">
 
-
-    ```python:downloader.py
+    ```python
 
     import os
     import requests
@@ -62,4 +62,5 @@ pin: true
             os.mkdir(path_file)
             print(f"{file_type} 파일 생성")
     ```
+</div>
 </details>
