--- a/_posts/2023-11-08-자연어처리-크롤링-준비.md
+++ b/_posts/2023-11-08-자연어처리-크롤링-준비.md
@@ -13,6 +13,12 @@ pin: true
 &nbsp;크롤링은 웹 페이지를 그대로 가지고 와서 데이터를 추출해 내는 것을 의미한다.
 # 크롤링을 하는 방법?
 &nbsp;자연어 처리 사전작업을 하기 위해(전처리) 학교에서 파이썬을 사용하였기에 나는 파이썬을 이용해, [Beautiful Soup](https://pypi.org/project/beautifulsoup4/), [selenium](https://www.selenium.dev/)를 사용하겠다.
+<details><summary>selenium, Beauriful soup 사용법</summary>
+<div markdown = "1">
+[selenium](https://naver.com)
+</div>
+</details>
+<br/>
 
 # 무엇을 크롤링 할 것인가?
 &nbsp;무엇을 크롤링 해야하는고.
@@ -29,14 +35,9 @@ pin: true
 
 # 이미지 다운로더
 
-&nbsp;아래 코드는 내가 심심풀이로 만들어본 이미지 다운로더이다. 하지만 텀프로젝트를 할 때에는 글을 긁어와야한다.
+&nbsp;아래 코드는 내가 심심풀이로 만들어본 이미지 다운로더이다. 하지만 텀프로젝트를 위해서는 글을 긁어와야한다.<br/>
 
-<details markdown="1">
-<summary>이미지 다운로더 py</summary>
-<div markdown="1">
-
-    ```python
-
+```python
     import os
     import requests
 
@@ -61,6 +62,4 @@ pin: true
         if not os.path.isdir(path_file):
             os.mkdir(path_file)
             print(f"{file_type} 파일 생성")
-    ```
-</div>
-</details>
+```
