--- a/_posts/2023-11-08-자연어처리-크롤링-준비.md
+++ b/_posts/2023-11-08-자연어처리-크롤링-준비.md
@@ -14,9 +14,9 @@ pin: true
 # 크롤링을 하는 방법?
 &nbsp;자연어 처리 사전작업을 하기 위해(전처리) 학교에서 파이썬을 사용하였기에 나는 파이썬을 이용해, [Beautiful Soup](https://pypi.org/project/beautifulsoup4/), [selenium](https://www.selenium.dev/)를 사용하겠다.
 <details><summary>selenium, Beauriful soup 사용법</summary>
-<div markdown = "1">
-[selenium](https://naver.com)
-</div>
+
+[selenium 사용법](https://naver.com), [Beautisul soup 사용법]()
+
 </details>
 <br/>
 
