--- a/_posts/2023-11-08-자연어처리-크롤링-준비.md
+++ b/_posts/2023-11-08-자연어처리-크롤링-준비.md
@@ -15,7 +15,7 @@ pin: true
 &nbsp;자연어 처리 사전작업을 하기 위해(전처리) 학교에서 파이썬을 사용하였기에 나는 파이썬을 이용해, [Beautiful Soup](https://pypi.org/project/beautifulsoup4/), [selenium](https://www.selenium.dev/)를 사용하겠다.
 <details><summary>selenium, Beauriful soup 사용법</summary>
 
-[selenium 사용법](https://naver.com), [Beautisul soup 사용법]()
+[selenium 사용법](https://oil-ramp-cat.github.io/posts/selenium-%EA%B3%B5%EB%B6%80%ED%95%98%EA%B8%B0/), [Beautisul soup 사용법](https://oil-ramp-cat.github.io/posts/Beautiful-Soup-%EA%B3%B5%EB%B6%80%ED%95%98%EA%B8%B0/)
 
 </details>
 <br/>
@@ -53,7 +53,7 @@ pin: true
         print("다운로드 성공\n")
 
     def file_check(file_name, file_type):
-        print("파일 채크 시작")
+        print("파일 체크 시작")
         path_file_type = f".\\{file_type}\\"
         if not os.path.isdir(path_file_type):
             os.mkdir(path_file_type)
