--- a/_posts/2023-11-08-selenium-공부하기.md
+++ b/_posts/2023-11-08-selenium-공부하기.md
@@ -6,4 +6,41 @@ tags: [selenium, crawling]
 pin: true
 ---
 
-# 셀레니움 저장소
+> 셀레니움 저장소
+
+## python 기본설정
+&nbsp;파이썬 가상환경 만들기
+```shell
+$ python -m venv 가상환경_이름
+```
+ctrl+shift+p 로 가상환경 잡아주기(안하면 다른 환경이랑 꼬이게 되어 불편하다.)<br/>
+selenium 설치
+```shell
+$ pip install selenium
+```
+## 크롬 버전 확인
+[chrome version](chrome://settings/help)
+## webdriver 불러오기(크롬 버전 114 이하)
+&nbsp;selenium은 웹 드라이버를 켜서 실행 시키기에 webdriver가 필요하다. [webdriver](https://chromedriver.chromium.org/downloads)다운로드.
+```python
+from selenium import webdriver
+
+driver = webdriver.Chrome("webdriver경로")
+```
+
+## webdriver 불러오기(크롬 버전 115 이상)
+&nbsp;115 버전 이상부터는 webdriver가 필요 없어졌다.
+```python
+from selenium import webdriver
+
+driver = webdriver.Chrome()
+```
+## webdriver 실행
+&nbsp;웹드라이버를 실행할 url 주소를 이용한다.
+```python
+from selenium import webdriver
+
+driver = webdriver.Chrome()
+url = "https://oil-ramp-cat.github.io"
+driver.get(url)
+```
