--- a/_posts/2023-11-08-selenium-공부하기.md
+++ b/_posts/2023-11-08-selenium-공부하기.md
@@ -13,7 +13,7 @@ pin: true
 ```shell
 $ python -m venv 가상환경_이름
 ```
-ctrl+shift+p 로 가상환경 잡아주기(안하면 다른 환경이랑 꼬이게 되어 불편하다.)<br/>
+ctrl+shift+p 로 가상환경 잡아주기(안하면 다른 환경이랑 꼬이게 되어 불편하다.)<br/><br/>
 selenium 설치
 ```shell
 $ pip install selenium
