--- a/_posts/2023-11-08-자연어처리-크롤링-준비.md
+++ b/_posts/2023-11-08-자연어처리-크롤링-준비.md
@@ -13,10 +13,14 @@ pin: true
 &nbsp;크롤링은 웹 페이지를 그대로 가지고 와서 데이터를 추출해 내는 것을 의미한다.
 # 크롤링을 하는 방법?
 &nbsp;자연어 처리 사전작업을 하기 위해(전처리) 학교에서 파이썬을 사용하였기에 나는 파이썬을 이용해, [Beautiful Soup](https://pypi.org/project/beautifulsoup4/), [selenium](https://www.selenium.dev/)를 사용하겠다.
-<details><summary>selenium, Beauriful soup 사용법</summary>
+<details>
+<summary>selenium, Beauriful soup 사용법</summary>
+<div markdown = "1">
 
+<br/>
 [selenium 사용법](https://oil-ramp-cat.github.io/posts/selenium-%EA%B3%B5%EB%B6%80%ED%95%98%EA%B8%B0/), [Beautisul soup 사용법](https://oil-ramp-cat.github.io/posts/Beautiful-Soup-%EA%B3%B5%EB%B6%80%ED%95%98%EA%B8%B0/)
 
+</div>
 </details>
 <br/>
 
