--- a/_posts/2023-11-08-selenium-공부하기.md
+++ b/_posts/2023-11-08-selenium-공부하기.md
@@ -44,3 +44,75 @@ driver = webdriver.Chrome()
 url = "https://oil-ramp-cat.github.io"
 driver.get(url)
 ```
+
+## 웹 페이지 로딩 대기
+&nbsp;웹 페이지가 로딩되지도 않았는데 요소를 불러오려고 하면 요소를 찾을 수 없다는 경고와 함께 프로그램이 종료됩니다. 
+&nbsp;그것을 해결하기위해 대기시간을 줄 수 있죠. 그리고 그 방법에는 2가지가 있습니다.
+
+### 1. sleep()
+&nbsp; 이 코드는 파이썬에 내장되어있는 함수로 ()안에 초를 넣어주면 그 시간동안 대기합니다.
+```python
+import time
+
+second = 10
+time.sleep(second) #10초 대기
+
+```
+
+### 2. implicitly_wait()
+selenium에 내장되어있는 함수로 ()안에 초를 넣어주면 됩니다.<br/>
+<br/>sleep()과의 차이점은 impliciyly_wait()은 '초'안에 웹페이지를 로딩했다면 '초'를 다 세지 않고 넘어가고, 아니라면 '초'동안 기다리게 됩니다.
+
+```python
+from selenium import webdriver
+
+second = "10"
+driver = webdriver.Chrome()
+driver.implicitly_wait(second)
+```
+
+## 요소 선택
+&nbsp;여기저기 찾아보다 보니 아무래도 시간이 지남에 따라 코드의 사용법이 달라졌다.<br/>
+<details>
+<summary>과거</summary>
+<div markdown = "1">
+
+```python
+driver.find_element_by_요소종류()
+```
+
+</div>
+</details>
+<br/>
+
+조건에 일치하는 가장 첫번째 요소를 반환
+```python
+from selenium.webdriver.common.by import By
+
+driver.find_element(By.CSS_SELECTOR, "요소 위치")#css_selector 기준으로
+```
+조건에 일치하는 모든 요소를 list형태로 반환
+```python
+from selenium.webdriver.common.by import By
+
+image = driver.find_elements(By.CSS_SELECTOR, "요소들 위치")#css_selector 기준으로
+#이미지 요소들을 가져온다고 했을 때 예시
+```
+By. 뒤에 올 수 있는 목록
+>CSS_SELECTOR<br/>
+>CLASS_NAME<br/>
+>ID<br/>
+>XPATH<br/>
+>NAME<br/>
+>LINK_TEXT<br/>
+>TAG_NAME<br/>
+>PARTIAL_LINK_TEXT
+## 추가기능
+### 1. 페이지 내리기
+```python
+def scroll_down(driver):
+    driver.execute_script("window.scrollTo(0,document.body.scrollHeight);")#함수설정
+    time.sleep(1)#너무 빠르면 로딩 불가능
+
+scroll_down(driver)#함수 사용
+```
