--- a/_posts/2023-11-08-selenium-공부하기.md
+++ b/_posts/2023-11-08-selenium-공부하기.md
@@ -2,7 +2,7 @@
 title: selenium을 공부해보자!
 date: 2023-11-08 11:45:00 +09:00
 categories: [selenium, 크롤링]
-tags: [selenium, crawling]
+tags: [selenium, crawling, 기록중]
 pin: true
 ---
 
@@ -107,6 +107,7 @@ By. 뒤에 올 수 있는 목록
 >LINK_TEXT<br/>
 >TAG_NAME<br/>
 >PARTIAL_LINK_TEXT
+
 ## 추가기능
 ### 1. 페이지 내리기
 ```python
