--- a/_posts/2023-11-08-자연어처리-크롤링-준비.md
+++ b/_posts/2023-11-08-자연어처리-크롤링-준비.md
@@ -2,7 +2,7 @@
 title: 자연어처리 데이터 준비
 date: 2023-11-08 10:54:00 +09:00
 categories: [자연어 처리 준비, 크롤링]
-tags: [natural language process, crawling, NLP]
+tags: [natural language process, crawling, NLP, 기록중]
 pin: true
 ---
 
@@ -16,8 +16,8 @@ pin: true
 <details>
 <summary>selenium, Beauriful soup 사용법</summary>
 <div markdown = "1">
-
 <br/>
+
 [selenium 사용법](https://oil-ramp-cat.github.io/posts/selenium-%EA%B3%B5%EB%B6%80%ED%95%98%EA%B8%B0/), [Beautisul soup 사용법](https://oil-ramp-cat.github.io/posts/Beautiful-Soup-%EA%B3%B5%EB%B6%80%ED%95%98%EA%B8%B0/)
 
 </div>
