--- a/_posts/2023-11-08-selenium-공부하기.md
+++ b/_posts/2023-11-08-selenium-공부하기.md
@@ -72,7 +72,7 @@ driver.implicitly_wait(second)
 ```
 
 ## 요소 선택
-&nbsp;여기저기 찾아보다 보니 아무래도 시간이 지남에 따라 코드의 사용법이 달라졌다.<br/>
+&nbsp;여기저기 찾아보다 보니 아무래도 시간이 지남에 따라 코드의 사용법이 달라졌나보군요.<br/>
 <details>
 <summary>과거</summary>
 <div markdown = "1">
