--- a/_posts/2023-11-08-selenium-공부하기.md
+++ b/_posts/2023-11-08-selenium-공부하기.md
@@ -108,6 +108,25 @@ By. 뒤에 올 수 있는 목록
 >TAG_NAME<br/>
 >PARTIAL_LINK_TEXT
 
+## ChromeOptions()
+그롬 웹 드라이버 설정
+
+```python
+
+options = webdriver.ChromeOptions()
+
+user_agent = "설정 값"
+options.add_argument('user-agent=' + user_agent)#설정한 user-agent로 변경
+options.add_argument('headless')#headless모드, 브라우저가 뜨지 않고 코드에서만 실행
+options.add_argument('--window-size= x, y')#브라우저 크기 x, y
+options.add_argument('--start-maximized')#브라우저 최대화로 실행
+options.add_argument('--start-fullscreen')#브라우저 풀스크린 모드로 실행
+options.add_argument('--blink-settings=imagesEnabled=False')#브라우저 이미지 로딩 안함
+options.add_argument('--mute-audio')#음속어
+options.add_argument('incognito')#시크릿 모드
+
+```
+
 ## 추가기능
 ### 1. 페이지 내리기
 ```python
