--- a/_posts/2023-11-08-자연어처리-크롤링-준비.md
+++ b/_posts/2023-11-08-자연어처리-크롤링-준비.md
@@ -36,6 +36,10 @@ pin: true
 
 &nbsp;너무 많은 종류가 있고 크롤링 할 때 불러올 엘리먼트가 전부 다르기에 하나를 골라 그에 맞는 코드를 작성해야 한다.
 
+# 뉴스 코멘트 크롤링
+
+[jtbc comment 크롤링](https://oil-ramp-cat.github.io/posts/%EC%9E%90%EC%97%B0%EC%96%B4%EC%B2%98%EB%A6%AC-%ED%81%AC%EB%A1%A4%EB%A7%81-%EC%A4%80%EB%B9%84/)
+<br/>
 
 # 이미지 다운로더
 
