--- a/_posts/2023-11-05-github.io-페이지-만들기2-성공기.md
+++ b/_posts/2023-11-05-github.io-페이지-만들기2-성공기.md
@@ -112,6 +112,6 @@ $ bundle exec jekyll serves
 <br/>&nbsp;잠시후 아래와 같은 문구가 뜨는 것을 볼 수 있고 [http://127.0.0.1:4000/](http://127.0.0.1:4000/)에 접속하여 Welcome to Jekyll! 이라는 문구가 표시된다면 일단 기본 설정은 완료한 것입니다!<br/>
 ![jekyll exec](https://github.com/oil-ramp-cat/oil-ramp-cat.github.io/assets/103806022/0bc96b8b-7429-463b-8ce9-2404d40b1f8d)
 
-## 야옹야옹
+## 마치며
 &nbsp;마침내 github.io에서 자신만의 사이트를 만들기 위한 첫걸음을 떌 수 있게 되었습니다.<br/>
 &nbsp;아직 페이지를 작성하지는 못하였지만 첫발을 내딛었다는 성취감이 있었달까요? 다음번에는 테마까지 정해서 끝을 향해 달려보도록 하죠!
