--- a/_posts/2023-11-08-자연어처리-크롤링-준비.md
+++ b/_posts/2023-11-08-자연어처리-크롤링-준비.md
@@ -18,7 +18,7 @@ pin: true
 <div markdown = "1">
 <br/>
 
-[selenium 사용법](https://oil-ramp-cat.github.io/posts/selenium-%EA%B3%B5%EB%B6%80%ED%95%98%EA%B8%B0/), [Beautisul soup 사용법](https://oil-ramp-cat.github.io/posts/Beautiful-Soup-%EA%B3%B5%EB%B6%80%ED%95%98%EA%B8%B0/)
+[selenium 사용법](https://oil-lamp-cat.github.io/posts/selenium-%EA%B3%B5%EB%B6%80%ED%95%98%EA%B8%B0/), [Beautisul soup 사용법](https://oil-lamp-cat.github.io/posts/Beautiful-Soup-%EA%B3%B5%EB%B6%80%ED%95%98%EA%B8%B0/)
 
 </div>
 </details>
@@ -38,7 +38,7 @@ pin: true
 
 # 뉴스 코멘트 크롤링
 
-[jtbc comment 크롤링](https://oil-ramp-cat.github.io/posts/%EC%9E%90%EC%97%B0%EC%96%B4%EC%B2%98%EB%A6%AC-%ED%81%AC%EB%A1%A4%EB%A7%81-%EC%A4%80%EB%B9%84/)
+[jtbc comment 크롤링](https://oil-lamp-cat.github.io/posts/%EC%9E%90%EC%97%B0%EC%96%B4%EC%B2%98%EB%A6%AC-%ED%81%AC%EB%A1%A4%EB%A7%81-%EC%A4%80%EB%B9%84/)
 <br/>
 
 # 이미지 다운로더
