--- a/_posts/2023-11-11-github.io-페이지-만들기3-성공기.md
+++ b/_posts/2023-11-11-github.io-페이지-만들기3-성공기.md
@@ -120,5 +120,7 @@ github 페이지 -> settings -> Pages -> Build and deployment
 
 다음 단계로 포스팅 하기 전 .gitignore파일을 찾아 Gemfile.lock이라는 줄을 추가해 줍니다.
 ![gitignore](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/990512d0-dd63-495e-9aa9-0402e82be241)
-이제 진짜진짜 세팅은 끝
+이제 진짜진짜 세팅은 끝.<br/>
 
+github 프로그램에 들어가서 
+![github app](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/81509513-52c2-4d40-927e-4adccefdfd7d)
