--- a/_posts/2023-11-11-github.io-페이지-만들기3-성공기.md
+++ b/_posts/2023-11-11-github.io-페이지-만들기3-성공기.md
@@ -13,10 +13,10 @@ pin: true
 # 1. 원하는 테마 고르기
 &nbsp; jekyll은 수많은 테마를 가지고 있고 그 중 원하는 테마를 선택하여 다운로드 하시면 됩니다.
 <br/><br/>
-[jekyll Theme](http://jekyllthemes.org/)
+http://jekyllthemes.org/
 <br/>
 ![jekyllthemes](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/003e9912-d6ec-45f5-a6da-3d974781790f)
-제가 선택한 테마는 [Chirpy](http://jekyllthemes.org/themes/jekyll-theme-chirpy/) 테마로 프론트엔드를 공부해본 적이 없는 저에게 다른 사람들이 많이 사용하는 이 테마는 꽤나 좋은 테마입니다.
+제가 선택한 테마는 http://jekyllthemes.org/themes/jekyll-theme-chirpy/ 테마로 프론트엔드를 공부해본 적이 없는 저에게 다른 사람들이 많이 사용하는 이 테마는 꽤나 좋은 테마입니다.
 <br/><br/>
 사이트에 들어가보면 ![jekyllthemes download](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/9fe89c01-59c6-4a54-b5b8-e5a713f9d124)
 <br/>이런 화면을 보게 될 텐데 저는 여기서 download를 누르지 않고 [Homepage](https://github.com/cotes2020/jekyll-theme-chirpy/)를 눌러 직접 github에서 다운받았습니다. 만 딱히 차이가 없는 것 같더군요.
@@ -124,3 +124,28 @@ github 페이지 -> settings -> Pages -> Build and deployment
 
 github 프로그램에 들어가서 
 ![github app](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/81509513-52c2-4d40-927e-4adccefdfd7d)
+
+summary와 description에 쓸 말을 쓰고 commit to main -> push to origin을 눌러 수정된 내용을 전부 github에 올립니다.
+
+![push to origin](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/cb3dc10f-d586-44b4-a6de-95cd1cd3f7c8)
+
+# 6. 블로그 확인하기
+github actions에 가보면 이렇게 오류가 난 것을 볼 수 있습니다?
+
+![github actions](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/52a0be29-b00c-4133-a4a3-67941efbf565)
+<details><summary>오류 해결</summary>
+<div markdown = "1">
+
+![오류](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/b433343e-410f-4cda-aead-635803228ebc)
+
+보통 오류를 잘 읽어보면 알 수 있다.
+
+http://jekyllthemes.org/ is not an HTTPS link
+http://jekyllthemes.org/themes/jekyll-theme-chirpy/ is not an HTTPS link
+
+https가 아닌 http링크라서 싫다고 한다... url을 직접 써야 할 듯 하다...
+
+</div>
+</details>
+
+오류를 해결하고 보면 
