--- a/_posts/2023-11-11-github.io-페이지-만들기3-성공기.md
+++ b/_posts/2023-11-11-github.io-페이지-만들기3-성공기.md
@@ -46,7 +46,7 @@ http://jekyllthemes.org/
 * ***Gemfile.lock -> Gemfil*** 파일 삭제
 * ***_posts*** 디렉토리 삭제
 * ***docs*** 디렉토리 삭제
-* ***.github/workflows/pages-deploy.yml.hook*** "파일도 삭제" deploy를 쓰는게 아니라 github actions을 사용할 것이기 때문에
+* ***.github/workflows/pages-deploy.yml.hook*** "파일도 삭제" deploy를 쓰는게 아니라 github actions을 사용할 것이기 때문에.
 <br/><br/>
 이정도로 세팅을 마무리 하였습니다. 이후 아래 커맨드를 실행하면 테마 적용은 끝입니다.
 ```shell
@@ -118,7 +118,8 @@ github 페이지 -> settings -> Pages -> Build and deployment
 
 좋아요 이제 힘든건 거의 다 지나갔군요.
 
-다음 단계로 포스팅 하기 전 .gitignore파일을 찾아 Gemfile.lock이라는 줄을 추가해 줍니다.
+다음 단계로 포스팅 하기 전 .gitignore파일을 찾아 Gemfile.lock이라는 줄을 추가하고 Misc, assets/js/dist을 주석 처리해 줍니다.
+
 ![gitignore](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/990512d0-dd63-495e-9aa9-0402e82be241)
 이제 진짜진짜 세팅은 끝.<br/>
 
