--- a/_posts/2023-11-11-github.io-페이지-만들기3-성공기.md
+++ b/_posts/2023-11-11-github.io-페이지-만들기3-성공기.md
@@ -79,6 +79,7 @@ $ bundle install
 <br/>기본적인 설정은 모두 끝났습니다! 만약 추가로 할 것이 있다면 아래로.
 <details><summary>추가적인 설정</summary>
 <div markdown = "1">
+
 ||||
 |---|---|---|
 |***google_site_verification***|나중에 설정 할 것으로 구글 검색에서 블로그가 보일 수 있게 설정하는 코드입력 자리|
@@ -151,13 +152,14 @@ github actions에 가보면 이렇게 오류가 난 것을 볼 수 있습니다?
 
 보통 오류를 잘 읽어보면 알 수 있다.
 
-http://jekyllthemes.org/ is not an HTTPS link
+http://jekyllthemes.org/ is not an HTTPS link<br/>
 http://jekyllthemes.org/themes/jekyll-theme-chirpy/ is not an HTTPS link
 
 https가 아닌 http링크라서 싫다고 한다... url을 직접 써야 할 듯 하다...
 
 </div>
 </details>
+<br/>
 
 오류를 해결하고 나서 본인 블로그 url (https://oil-lamp-cat.github.io/)를 입력해 접속 할 수 있다!
 ![my blog](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/49178345-d8ee-438b-b6dd-8e42c16725e4)
