--- a/_posts/2023-11-08-자연어처리-크롤링-준비.md
+++ b/_posts/2023-11-08-자연어처리-크롤링-준비.md
@@ -41,6 +41,10 @@ pin: true
 [jtbc comment 크롤링](https://oil-lamp-cat.github.io/posts/%EC%9E%90%EC%97%B0%EC%96%B4%EC%B2%98%EB%A6%AC-%ED%81%AC%EB%A1%A4%EB%A7%81-%EC%A4%80%EB%B9%84/)
 <br/>
 
+# 네이버 주식토론방 크롤링
+
+[네이버 주식토론방 크롤링](https://oil-lamp-cat.github.io/posts/%EB%84%A4%EC%9D%B4%EB%B2%84-%EC%A3%BC%EC%8B%9D%ED%86%A0%EB%A1%A0%EB%B0%A9-%EB%8C%93%EA%B8%80-%ED%81%AC%EB%A1%A4%EB%A7%81/)
+
 # 이미지 다운로더
 
 &nbsp;아래 코드는 내가 심심풀이로 만들어본 이미지 다운로더이다. 하지만 텀프로젝트를 위해서는 글을 긁어와야한다.<br/>
