--- a/_posts/2023-11-01-Markdown-저장소.md
+++ b/_posts/2023-11-01-Markdown-저장소.md
@@ -1,8 +1,8 @@
 ---
 title: markdown 저장
 date: 2023-11-01 00:00:00 +09:00
-categories: [마크다운, markdown]
-tags: [markdown]
+categories: [마크다운, markdown, 공부중]
+tags: [markdown, 기록중]
 pin: true
 ---
 <br/>
