--- a/_posts/2023-11-14-네이버-주식토론방-댓글-크롤링.md
+++ b/_posts/2023-11-14-네이버-주식토론방-댓글-크롤링.md
@@ -10,8 +10,8 @@ pin: true
 >데이터 준비중
 
 # 코드
-
-네이버 주식토론방 크롤링을 하다보면 관리자가 삭제한 글이라는 알람이 뜨며 프로그램을 강제종료 시키기에 exception을 걸어 무시하고 지나갈 수 있게 하였다. 코드에 대한 설명은 추후에 천천히 하나씩 채워나가기로 하겠다.
+## version 1
+selenium 으로 크롤링을 하기 위해 처음에는 Class name으로 요소를 가저오려 했으나 날짜, 추천, 비추천등 다른 쓸모 없는 요소까지 같은 이름으로 되어있어 다른 방법을 찾아보다 CSS selector를 이용해서 요소를 추출하기로 했다.
 
 <details><summary>코드 version 1</summary>
 <div markdown = "1">
@@ -101,6 +101,10 @@ print("전체 페이지 : ",result[0])
 
 </div>
 </details>
+<br/>
+
+## version 2
+네이버 주식토론방 크롤링을 하다보면 관리자가 삭제한 글이라는 알람이 뜨며 프로그램을 강제종료 시키기에 exception을 걸어 무시하고 지나갈 수 있게 하였다. 코드에 대한 설명은 추후에 천천히 하나씩 채워나가기로 하겠다.
 
 <details><summary>코드 version 2</summary>
 <div markdown = "1">
