--- a/_posts/2023-11-08-selenium-공부하기.md
+++ b/_posts/2023-11-08-selenium-공부하기.md
@@ -1,7 +1,7 @@
 ---
 title: selenium을 공부해보자!
 date: 2023-11-08 11:45:00 +09:00
-categories: [selenium, 크롤링]
+categories: [selenium, 크롤링, 공부중]
 tags: [selenium, crawling, 기록중]
 pin: true
 ---
