--- a/_posts/2023-11-15-Pyqt5-공부하기.md
+++ b/_posts/2023-11-15-Pyqt5-공부하기.md
@@ -1,5 +1,5 @@
 ---
-title: tkinter를 공부해보자!
+title: Pyqt5를 공부해보자!
 date: 2023-11-15 11:42:00 +09:00
 categories: [Pyqt5, 앱 만들기, 공부중]
 tags: [Pyqt5, app, 기록중]
@@ -7,3 +7,104 @@ pin: true
 ---
 >파이썬으로 [shimejiee](https://kilkakon.com/shimeji/) 같은 나를 힐링시켜줄 프로그램을 만들어보고 싶다는 생각에 시작한 기록
 
+# 코드
+## tray icon
+나는 처음 프로그램 gui만들기로 파이썬 내에 있는 tkinter라는 라이브러리를 사용했었다. gui프로그래밍을 처음하다보니 아무래도 0부터 시작하는거라 하고 싶은 것은 많은데 실력이 안되 여기저기 찾아봤었다. 그러다 gif, 움직임까지 성공하고 tray icon을 만들어서 제어하려 했으나 tkinter에서는 따로 [pystray](https://pypi.org/project/pystray/)라는 라이브러리를 사용했었다.
+
+tkinter로 마우스 이벤트를 만들다 실패 후 한참이 지나 다시 이것저것 찾아보다 Pyqt를 찾게되었고 tray icon 이 훨씬 쉬운 방법으로 만들 수 있다는 것을 알게되었다.
+
+<details><summary>전체 코드</summary>
+<div markdown = "1">
+
+```python
+from PyQt5.QtGui import *
+from PyQt5.QtWidgets import *
+
+app = QApplication([])
+app.setQuitOnLastWindowClosed(False)
+
+icon = QIcon("icon.png")
+
+tray = QSystemTrayIcon()
+tray.setIcon(icon)
+tray.setVisible(True)
+
+menu = QMenu()
+option1 = QAction("hi")
+option2 = QAction("HI2")
+menu.addAction(option1)
+menu.addAction(option2)
+
+quit = QAction("Quit")
+quit.triggered.connect(app.quit)
+menu.addAction(quit)
+
+tray.setContextMenu(menu)
+
+app.exec_()
+```
+</div>
+</details>
+<br/>
+
+### 코드 설명
+
+처음 Pyqt5의 라이브러리를 사용하기 위해 QtGui(QIcon)와 QtWidgets(QApplication, QSystemTrayIcon, QMenu, QAction)을 import 하였다.
+```python
+from PyQt5.QtGui import * #QIcon
+from PyQt5.QtWidgets import * #QApplication, QSystemTrayIcon, QMenu, QAction
+```
+
+위젯을 초기화, 마무리, 설정등을 위해 가장 기본 단계인 QApplication을 사용하고 setQuitOnLastWindowClosed를 False로 설정하여 켜져있는 창이 없더라도 프로그램이 종료되지 않도록 해준다.
+```python
+app = QApplication([])
+app.setQuitOnLastWindowClosed(False)
+```
+
+내가 넣고 싶은 아이콘을 QIcon 안에 넣어주면 된다. 그럼 아래와 같이 뜰 것이다.
+![pyqt5trayicon](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/2ed230d2-887c-459c-9200-4bd9dda9e2d8)
+
+```python
+icon = QIcon("아이콘 위치")
+```
+
+이제 진짜로 트레이 아이콘을 만들 차례이다. PyQt자체에 QSystemTrayIcon이라는 함수가 있기에 이것을 이용해 나는 트레이 아이콘을 쓸거고 tray라는 이름으로 정해주겠다, 선언한다.<br/>
+아까 정해준 아이콘을 setIcon을 이용해 넣어준다.<br/>
+트레이 아이콘이 보일 수 있게 setVisible을 ***True***로 해준다.( 나중에 앱이 켜진 상황에서는 트레이 아이콘을 끄고 싶다면 ***False***로 바꾸면 되겠다.)
+```python
+tray = QSystemTrayIcon()
+tray.setIcon(icon)
+tray.setVisible(True)
+```
+
+이제 메뉴판을 만들어줄 차례다<br/>
+QMenu를 menu로 선언해 주고 QAction안에 이름을 넣어주면 되겠다. 그리고 실행되면 위에서부터 하나씩 뜨는 듯 하니 순서를 정하면 된다.(menu안에 menu 넣는 법을 따로 찾아봐야겠다)<br/>
+addAction을 이용해 menu에 option설정한 것을 넣어주자. (마치 피자에 넣는 치즈?)<br/>
+```python
+menu = QMenu()
+option1 = QAction("hi")
+option2 = QAction("HI2")
+menu.addAction(option1)
+menu.addAction(option2)
+```
+
+위와 과정은 같지만 지금은 다른 명령어 없이 트레이 아이콘 만으로 종료를 해주기 위해 triggered.connect(app.quit)을 만들어주었다.
+```python
+quit = QAction("Quit")
+quit.triggered.connect(app.quit)
+menu.addAction(quit)
+```
+
+이제 만들어진 트레이 아이콘에 memu를 넣어주자. (피자를 굽자!)
+```python
+tray.setContextMenu(menu)
+```
+
+파이썬은 위에서 아래로 다 실행하고 나면 종료하지만 원래는 for문을 사용하겠으나 tkinter에서 main.loop()를 사용한 것 처럼 무한루프를 걸어주기 위해 app.exec_()를 사용한다. 앱이 종료되면 0을 return한다고 한다.
+```python
+app.exec_()
+```
+
+
+# 참조
+* [[PySide2] 1. 기본동작원리](https://onlytojay.medium.com/pyside2-1-%EA%B8%B0%EB%B3%B8%EB%8F%99%EC%9E%91%EC%9B%90%EB%A6%AC-72ea6572a65b)
