고양이 코드
고양이 코드

--- a/_posts/2023-11-15-Pyqt5-공부하기.md
+++ b/_posts/2023-11-15-Pyqt5-공부하기.md
@@ -105,6 +105,10 @@ tray.setContextMenu(menu)
 app.exec_()
 ```
 
+## 고양이 코드
+>tkinter에서 만든 고양이 코드를 pyqt에서 구현하기
+
+
 
 # 참조
 * [[PySide2] 1. 기본동작원리](https://onlytojay.medium.com/pyside2-1-%EA%B8%B0%EB%B3%B8%EB%8F%99%EC%9E%91%EC%9B%90%EB%A6%AC-72ea6572a65b)
