--- a/_posts/2023-11-15-Pyqt5-공부하기.md
+++ b/_posts/2023-11-15-Pyqt5-공부하기.md
@@ -108,7 +108,145 @@ app.exec_()
 ## 고양이 코드
 >tkinter에서 만든 고양이 코드를 pyqt에서 구현하기
 
+<details><summary>version 1 처음 써보는 gui이니 일단 고양이 gif 실행만</summary>
+<div markdown="1">
+
+```python
+import sys
+from PyQt5.QtGui import QMovie
+from PyQt5 import QtCore, QtWidgets, QtGui
+import random
+
+class Pet(QtWidgets.QMainWindow):
+    def __init__(self, img_path, xy, on_top, size=1.0):
+        super(Pet, self).__init__()
+        self.timer = QtCore.QTimer(self)
+        self.img_path = img_path
+        self.xy = xy
+        self.from_xy = xy
+        self.from_xy_dif = [0, 0]
+        self.to_xy = xy
+        self.to_xy_dif = [0, 0]
+        self.speed = 60#나중에 설정
+        self.direction = [0, 0]
+        self.size = size
+        self.on_top = on_top
+        self.localPos =None
+
+        self.setupUi()
+        self.show()
+
+    def mouseReleaseEvent(self, a0: QtGui.QMouseEvent) -> None:
+        if self.to_xy_dif == [0, 0] and self.from_xy_dif == [0, 0]:
+            pass
+        else:
+            self.walk_dif(self.from_xy_dif, self.to_xy_dif, self.speed, restart=True)
+
+    # 마우스 눌렀을 때
+    def mousePressEvent(self, a0: QtGui.QMouseEvent):
+        self.localPos = a0.localPos()
+
+    # 드래그 할 때
+    def mouseMoveEvent(self, a0: QtGui.QMouseEvent):
+        self.timer.stop()
+        self.xy = [int(a0.globalX() - self.localPos.x()), int(a0.globalY() - self.localPos.y())]
+        print(self.xy)
+        self.move(*self.xy)
+
+    def walk(self, from_xy, to_xy, speed=60):
+        self.from_xy = from_xy
+        self.to_xy = to_xy
+        self.speed = speed
+
+        self.timer = QtCore.QTimer(self)
+        self.timer.timeout.connect(self.__walkHandler)
+        self.timer.start(1000 / self.speed)
+
+    # 초기 위치로부터의 상대적 거리를 이용한 walk
+    def walk_dif(self, from_xy_dif, to_xy_dif, speed=60, restart=False):
+        self.from_xy_dif = from_xy_dif
+        self.to_xy_dif = to_xy_dif
+        self.from_xy = [self.xy[0] + self.from_xy_dif[0], self.xy[1] + self.from_xy_dif[1]]
+        self.to_xy = [self.xy[0] + self.to_xy_dif[0], self.xy[1] + self.to_xy_dif[1]]
+        self.speed = speed
+        if restart:
+            self.timer.start()
+        else:
+            self.timer.timeout.connect(self.__walkHandler)
+            self.timer.start(1000 / self.speed)
+
+    def __walkHandler(self):
+        if self.xy[0] >= self.to_xy[0]:
+            self.direction[0] = 0
+        elif self.xy[0] < self.from_xy[0]:
+            self.direction[0] = 1
+
+        if self.direction[0] == 0:
+            self.xy[0] -= 1
+        else:
+            self.xy[0] += 1
+
+        if self.xy[1] >= self.to_xy[1]:
+            self.direction[1] = 0
+        elif self.xy[1] < self.from_xy[1]:
+            self.direction[1] = 1
+
+        if self.direction[1] == 0:
+            self.xy[1] -= 1
+        else:
+            self.xy[1] += 1
+
+        self.move(*self.xy)
 
 
+    def setupUi(self):
+        Centralwidget = QtWidgets.QWidget(self)#https://wikidocs.net/35746
+        self.setCentralWidget(Centralwidget)
+
+        flags = QtCore.Qt.WindowFlags(QtCore.Qt.WindowType.FramelessWindowHint | QtCore.Qt.WindowType.WindowStaysOnTopHint if self.on_top else QtCore.Qt.WindowType.FramelessWindowHint)
+        self.setWindowFlags(flags)
+        self.setAttribute(QtCore.Qt.WidgetAttribute.WA_NoSystemBackground, True)
+        self.setAttribute(QtCore.Qt.WidgetAttribute.WA_TranslucentBackground, True)
+
+        label = QtWidgets.QLabel(Centralwidget)
+        movie = QMovie(self.img_path)
+        label.setMovie(movie)
+        movie.start()
+        movie.stop()
+
+        width = int(movie.frameRect().size().width() * self.size)
+        height = int(movie.frameRect().size().height() * self.size)
+        movie.setScaledSize(QtCore.QSize(width, height))
+        movie.start()
+
+        self.setGeometry(self.xy[0], self.xy[1], width, height)
+
+    def mouseDoubleClickEvent(self, e):
+        QtWidgets.qApp.quit()
+
+if __name__ == '__main__':
+    app = QtWidgets.QApplication(sys.argv)
+
+    s = Pet('idle.gif', xy = [200 , 200], on_top=True)
+
+    sys.exit(app.exec_())
+```
+
+</div>
+</details>
+
+<details><summary>version 2 tray icon 추가</summary>
+<div markdown="1">
+
+</div>
+</details>
+
+## 문제사항
+처음에 https://github.com/kairess/animated-wallpaper-sticker/blob/master/Sticker.py 사이트를 참조해서 코딩을 하려 했으나
+```python
+flags = QtCore.Qt.WindowFlags(QtCore.Qt.FramelessWindowHint | QtCore.Qt.WindowStaysOnTopHint if self.on_top else QtCore.Qt.FramelessWindowHint)
+```
+이 부분이 실행 안되는 것을 발견 찾아보니 WA_TranslucentBackground으로 실행 요망 혹은 WindowType FramelessWindowHint로 바꿔야함 시간이 지나면서 바뀐 듯 하다.
 # 참조
 * [[PySide2] 1. 기본동작원리](https://onlytojay.medium.com/pyside2-1-%EA%B8%B0%EB%B3%B8%EB%8F%99%EC%9E%91%EC%9B%90%EB%A6%AC-72ea6572a65b)
+* [kairess/animated-wallpaper-sticker](https://github.com/kairess/animated-wallpaper-sticker/blob/master/Sticker.py)
