--- a/_posts/2023-11-15-Pyqt5-공부하기.md
+++ b/_posts/2023-11-15-Pyqt5-공부하기.md
@@ -111,7 +111,8 @@ app.exec_()
 <details><summary>version 1 처음 써보는 gui이니 일단 고양이 gif 실행만</summary>
 <div markdown="1">
 
-```python : pet_pyqt_ver1.py
+```python
+
 import sys
 from PyQt5.QtGui import QMovie
 from PyQt5 import QtCore, QtWidgets, QtGui
