--- a/_posts/2023-11-15-Pyqt5-공부하기.md
+++ b/_posts/2023-11-15-Pyqt5-공부하기.md
@@ -238,7 +238,7 @@ if __name__ == '__main__':
 
 <details><summary>version 2 tray icon 추가</summary>
 <div markdown="1">
-
+아직 하는중
 </div>
 </details>
 
@@ -248,6 +248,9 @@ if __name__ == '__main__':
 flags = QtCore.Qt.WindowFlags(QtCore.Qt.FramelessWindowHint | QtCore.Qt.WindowStaysOnTopHint if self.on_top else QtCore.Qt.FramelessWindowHint)
 ```
 이 부분이 실행 안되는 것을 발견 찾아보니 WA_TranslucentBackground으로 실행 요망 혹은 WindowType FramelessWindowHint로 바꿔야함 시간이 지나면서 바뀐 듯 하다.
+```python
+flags = QtCore.Qt.WindowFlags(QtCore.Qt.WindowType.FramelessWindowHint | QtCore.Qt.WindowType.WindowStaysOnTopHint if self.on_top else QtCore.Qt.WindowType.FramelessWindowHint)
+```
 # 참조
 * [[PySide2] 1. 기본동작원리](https://onlytojay.medium.com/pyside2-1-%EA%B8%B0%EB%B3%B8%EB%8F%99%EC%9E%91%EC%9B%90%EB%A6%AC-72ea6572a65b)
 * [kairess/animated-wallpaper-sticker](https://github.com/kairess/animated-wallpaper-sticker/blob/master/Sticker.py)
