--- a/_posts/2023-11-14-네이버-주식토론방-댓글-크롤링.md
+++ b/_posts/2023-11-14-네이버-주식토론방-댓글-크롤링.md
@@ -1012,3 +1012,13 @@ file.close()
 
 </div>
 </details>
+음... 여전히 100페이지를 넘어가는 순간 멈춰버린다.. 이유를 더 찾아보기로 하자.
+
+## version6
+찾았다 아무래도 내가 user-agent를 설정해 주지 않아 네이버 서버에서 봇으로 판단하고 차단했다는 생각이 든다. 고로 user-agent를 추가해 주었다.
+
+## 최종
+
+---
+### 참조
+* [크롤링 전문가가 알려주는 ‘차단 우회 5가지 원칙’](https://blog.hashscraper.com/5-principles-for-bypassing-web-crawling-blocks/)
