--- a/_posts/2023-11-14-네이버-주식토론방-댓글-크롤링.md
+++ b/_posts/2023-11-14-네이버-주식토론방-댓글-크롤링.md
@@ -1017,8 +1017,254 @@ file.close()
 ## version6
 찾았다 아무래도 내가 user-agent를 설정해 주지 않아 네이버 서버에서 봇으로 판단하고 차단했다는 생각이 든다. 고로 user-agent를 추가해 주었다.
 
+## version7
+위 방법을 써봤으나 이상하게도 [주식토론방 100페이지](https://finance.naver.com/item/board.naver?code=005930&page=100)는 링크로 접속 할 수 있으나 [주식토론방 101페이지](https://finance.naver.com/item/board.naver?code=005930&page=101)는 ***잘못된 접근***이라는 문구가 뜨며 접근을 차단해 버린다.
+![wrong_connect](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/d433020f-35fc-4049-8475-8b76519d3643)헌데 주식토론방 100페이지에서 직접 101페이지를 클릭해서 들어가면 접근이 가능하다. 난 이런일이 처음이다보니 여기저기 찾아보았고 request모듈을 사용할 때 reference라는 것을 보았다. 이것은 봇을 잡기 위한 최소한의 보안으로 이 링크를 가지고 있더라도 정해진 위치에서 오지 않는다면 접근할 수 없게 만들어 놓은 것이다. (아마도)
+
+이것을 해결하기 위해 selenium에서 reference 값을 조정할 수 있나 찾아보았지만 proxy를 쓰는 방법 외에는 공식적인 방법이 없다고들 하였다. 고로 내가 생각한 방법은 글을 불러오기 위한 url을 아예 request에 header값을 넣어 가져오기로 한 것이다. 그리고 성공했다!!! 하루하루 발전해가니 기분이 좋다!
+
+<details><summary>코드 ver7</summary>
+<div markdown = "1">
+
+```python
+import selenium
+from selenium import webdriver
+import time
+import datetime
+from selenium.common.exceptions import UnexpectedAlertPresentException
+import pandas as pd
+from selenium.webdriver.common.by import By
+import os.path
+from url_parser import url_parser as up
+
+#------------------------------------------------------------------------
+
+file = 'log.txt'
+if os.path.isfile(file):
+    print("log 파일 존재")
+else:
+    f = open("log.txt", 'w')
+    f.close()
+
+start_page = 1#0페이지 존재 안함 0넣으면 문제가 좀 많이많이 커져용
+end_page = 10#int(max_page())#최대 99168
+
+file = open("log.txt", "a", encoding="UTF-8")
+file.write(f"\n-------------------------------\n크롤링 시작 페이지 수: {start_page}\n크롤링 총 페이지 수 : {end_page}\n\n")
+file.close()
+
+start = time.time()
+start_middle = time.time()
+
+#중간 저장 리스트 목록
+all_comment_url = []
+url_100 = []
+url_10 = []
+
+date_text_for_100 = []
+title_text_for_100 = []
+body_text_for_100 = []
+
+date_text_for_10 = []
+title_text_for_10 = []
+body_text_for_10 = []
+
+date_text = []
+title_text = []
+body_text = []
+
+#에러(관리자 삭제)수 체크 필수임
+error_count = 0
+
+#시간 리셋
+tic_10 = 0
+tic_100 = 0
+
+#크롤링 시작
+
+
+for t in range (start_page, end_page+1):
+    all_comment_url = up(t, t)    
+    time_page_start = time.time()
+    chrome_options = webdriver.ChromeOptions()#옵션 드라이버 설정
+    chrome_options.add_argument('headless')#웹 드라이버 안띄우고 실행
+    chrome_options.add_argument('--no-sandbox')#이걸로 오류를 잡았는데 무엇인지 이해 불가 	Disables the sandbox for all process types that are normally sandboxed. Meant to be used as a browser-level switch for testing purposes only
+    chrome_options.add_argument('disable-gpu')#gpu사용 안함
+    user_agent = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119.0.0.0 Safari/537.36"
+    chrome_options.add_argument('user-agent=' + user_agent)
+    driver = webdriver.Chrome(options=chrome_options)#옵션 적용
+    for url in all_comment_url:
+        #print(url)
+        try:
+            url_time_start = time.time()
+            url = "https://finance.naver.com"+url
+            driver.get(url=url) 
+            driver.implicitly_wait(10)
+            date = driver.find_element(By.CLASS_NAME, 'gray03.p9.tah').text
+            title_not_clean = driver.find_element(By.CLASS_NAME, 'c.p15').text
+            body_not_clean = driver.find_element(By.ID, 'body').text
+            body = body_not_clean.replace("\n","")
+            title = title_not_clean.replace("#","")
+            #append
+            date_text_for_100.append(date)
+            date_text_for_10.append(date)
+            date_text.append(date)
+            title_text_for_100.append(title)
+            title_text_for_10.append(title)
+            title_text.append(title)
+            body_text_for_100.append(body)
+            body_text_for_10.append(body)
+            body_text.append(body)         
+            url_100.append(url)
+            url_10.append(url)  
+            url_time_end = time.time()
+            print(url_time_end - url_time_start, ":", "중간시간")
+        
+        except UnexpectedAlertPresentException:#무조건 필요 관리자가 삭제한 글을 불러오지 못할 때에 문제가 아주 크게크게 생김 프로그램이 멈춰버려!
+            #print("\n관리자가 삭제한 글 임\n")
+            error_count = error_count + 1
+
+    #10페이지 마다 저장(혹시 모를 오류 발생으로 인한 데이터 소실 해소)
+    if(t%10 == 0):
+        tic_10 = tic_10 + 10
+        toc_10 = tic_10 - 10
+        df_for_10 = pd.DataFrame()
+        df_for_10['date'] = date_text_for_10
+        df_for_10['title'] = title_text_for_10
+        df_for_10['body'] = body_text_for_10
+        df_for_10['url'] = url_10
+
+        date_text_for_10.clear()
+        title_text_for_10.clear()
+        body_text_for_10.clear()
+        url_10.clear()
+
+        df_for_10.to_csv(f"data/for10/{toc_10}_{tic_10}.txt", index = False, sep='\t')
+        df_for_10.to_csv(f"data/for10/{toc_10}_{tic_10}.csv", index=False, sep='\t')
+        file = open("log.txt", "a", encoding="UTF-8")
+        txt_text = f"{t}파일 생성 : {toc_10}_{tic_10}.txt"
+        file.write(txt_text)
+        file.close()
+
+
+    if(t%100 == 0):
+        tic_100 = tic_100 + 100
+        toc_100 = tic_100 - 100
+        df_for_100 = pd.DataFrame()
+        df_for_100['date'] = date_text_for_100
+        df_for_100['title'] = title_text_for_100
+        df_for_100['body'] = body_text_for_100
+        df_for_100['url'] = url_100
+        
+        date_text_for_100.clear()
+        title_text_for_100.clear()
+        body_text_for_100.clear()
+        url_100.clear()
+
+        df_for_10.to_csv(f"data/for10/{toc_100}_{tic_100}.txt", index = False, sep='\t')
+        df_for_10.to_csv(f"data/for10/{toc_100}_{tic_100}.csv", index=False, sep='\t')
+        file = open("log.txt", "a", encoding="UTF-8")
+        txt_text = f"{t}파일 생성 : {toc_100}_{tic_100}.txt"
+        file.write(txt_text)
+        file.close()
+    
+    all_comment_url = []
+    end_middle = time.time()
+    time_end_page = time.time()
+    sec = (time_end_page - time_page_start)
+    sec_middle = (end_middle - start_middle)
+    result_middle = str(datetime.timedelta(seconds=sec_middle)).split(".")
+    result = str(datetime.timedelta(seconds=sec)).split(".")
+    print(f"페이지{t}시간 : ",result[0])#시간 표시
+    print(f"현재까지 시간 : ", result_middle[0])#지금까지 시간 표시
+    print(f"관리자 삭제 글 수 : {error_count}")#관리자 삭제 글 수 
+    today = time
+    file = open("log.txt", "a", encoding="UTF-8")
+    text = f"시간 : {today.strftime('%Y-%m-%d %H:%M:%S')}\n페이지{t}의 걸린시간 : {result[0]}\n현재까지 걸린 시간 : {result_middle[0]}\n관리자가 삭제한(error)수 : {error_count}\n\n"
+    file.write(text)
+    file.close()
+driver.quit()
+
+#전체 데이터 프레임 만들어서 저장
+df = pd.DataFrame()
+df['date'] = date_text
+df['title'] = title_text
+df['body'] =  body_text
+
+df.to_csv(f"data/0_{end_page}_result.txt", index = False, sep='\t')
+#page = ILLEGAL_CHARACTERS_RE.sub(r'', text)#엑셀파일 불가한 특수문자 제거 -> 7초에서 11초 정도로 시간 증가
+df.to_csv(f"data/0_{end_page}_result.csv", index=False, sep='\t')#엑셀로 포함 불가능한 길이의 문장들이 존재
+end = time.time()
+sec = (end - start)
+result = str(datetime.timedelta(seconds=sec)).split(".")
+print("전체 페이지 : ",result[0])
+
+file = open("log.txt", "a", encoding="UTF-8")
+file.write("--------------------------------------------------------\n\n\n")
+file.close()
+#2023-11-18 어쩐지 자꾸 중첩되더라, url이 자꾸 점점 늘어서 그럼, 20페이지 40분에서 4분으로 감소, 35페이지 7분, 한 페이지당 7초
+#2023-11-21 excel 파일로 만들기에는 문장이 길어서 넣지 못하는 경우가 생겨 csv로 생성
+```
+
+</div>
+</details>
+
+<br/>
+추가적으로 링크를 request로 크롤링 하기 위한 모듈을 만들었다.
+<br/>
+
+<details><summary>url_parser</summary>
+<div markdown = "1">
+
+```python
+import  os
+import  requests
+from bs4 import BeautifulSoup as bs
+from selenium.webdriver.common.by import By
+ 
+def url_parser(min, max):
+    for t in range(int(min), int(max + 1)):
+        url = f'https://finance.naver.com/item/board.naver?code=005930&page={t}'
+        
+        headers = {
+            'Referer': 'https://finance.naver.com/item/board.naver?code=005930',
+            'User-Agent' : 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119.0.0.0 Safari/537.36'
+            }
+        
+        response = requests.get(url = url, headers = headers)
+        #print(response) # 접속 확인 (200 = 성공)
+        html_text = response.text
+        html = bs(html_text, 'html.parser')
+        url_per_page = html.select('.title')
+        
+        url_per_page_url = []
+
+        for n in url_per_page:
+            url_per_page_url.append(n.a["href"])
+
+    return url_per_page_url
+
+def max_page(webdriver):
+    chrome_options = webdriver.ChromeOptions()
+    chrome_options.add_argument('headless')
+    driver = webdriver.Chrome(options=chrome_options)
+    driver.get("https://finance.naver.com/item/board.naver?code=005930")
+    driver.find_element(By.CLASS_NAME, 'pgRR').click()
+    max_not_clean = driver.find_element(By.CSS_SELECTOR, '#content > div.section.inner_sub > table:nth-child(3) > tbody > tr > td:nth-child(2) > table > tbody > tr > td.on > a').text
+    driver.quit()
+    max = max_not_clean.replace(",","")
+    print("최대값 : ",max)
+    return max
+```
+
+</div>
+</details>
+
 ## 최종
+처음으로 목적을 가지고 프론트엔드에 대해 1도 못하던 내가 0부터 차근차근 쌓아가면서 이렇게 만들어낼 줄은 생각도 못했다. 이제 코드를 깨끗하게 정리해서 최종 코드를 올리고 마무리 하도록 하겠다.(2023-11-22)
 
 ---
 ### 참조
 * [크롤링 전문가가 알려주는 ‘차단 우회 5가지 원칙’](https://blog.hashscraper.com/5-principles-for-bypassing-web-crawling-blocks/)
+*  [네이버 종목토론실 글 목록 수집해보기](https://icedhotchoco.tistory.com/entry/web-scraping-bionote)
+*  [Referer missing in HTTP header of Selenium request](https://stackoverflow.com/questions/54119674/referer-missing-in-http-header-of-selenium-request)
