정적 크롤링
정적 크롤링

--- a/_posts/2023-11-14-네이버-주식토론방-댓글-크롤링.md
+++ b/_posts/2023-11-14-네이버-주식토론방-댓글-크롤링.md
@@ -1,5 +1,5 @@
 ---
-title: 네이버 주식토론방 크롤링
+title: 네이버 종목토론방 크롤링
 date: 2023-11-18 21:22:15 +09:00
 categories: [크롤링, selenium, 크롤링, 성공]
 tags: [selenium, crawling]
@@ -1259,6 +1259,164 @@ def max_page(webdriver):
 
 </div>
 </details>
+
+## version 8 (Beautiful soap)
+Beautiful soap과 request를 이용해서 header를 조작하여 접근 및 크롤링 해보고 싶다는 생각이 들어 만들어 보았다.
+<details><summary>Crawler_BS4.py</summary>
+<div markdown = "1">
+
+```python
+import os
+import requests
+from bs4 import BeautifulSoup as bs
+import url_parser as UP
+import time
+import pandas as pd
+import datetime
+from tqdm import tqdm
+from fake_useragent import UserAgent
+
+#정적 크롤러
+print("시작 페이지를 입력하시오(최소 1) : ")
+input_start = input()
+print("끝 페이지를 입력하시오(최대 99522) : ")
+input_end = input()
+print("다운로드 형식 : 1. excel(긴글 존재시 불가)     2. csv  3. txt ")
+input_type = int(input())
+
+start_page = int(input_start)
+end_page = int(input_end)
+
+log_file_name = 'log.txt'
+if os.path.isfile(log_file_name):
+    print("log 파일 존재")
+else:
+    f = open("log.txt", 'w')
+    f.close()
+    print("로그파일 생성")
+
+
+file = open("log.txt", "a", encoding="UTF-8")
+file.write(f"\n---------------------------------\n 정적 크롤링 시작\n 시작 페이지: {start_page}, 마지막 페이지: {end_page}")
+file.close()
+
+start_time = time.time()
+print("크롤링 url 시작")
+crawling_url_list = UP.url_parser(start_page, end_page)
+print("크롤링 url 생성")
+
+date_list = []
+title_list = []
+comment_list = []
+goodcnt_list = []
+badcnt_list = []
+url_list = []
+
+print("데이터 수집 시작")
+for url_p in tqdm(crawling_url_list):
+    user_agent = UserAgent()
+    headers = {
+            'Referer': 'https://finance.naver.com/item/board.naver?code=005930',
+            'User-Agent': user_agent.random
+        }
+    url = "https://finance.naver.com" + url_p
+    response_url_html = requests.get(url=url, headers=headers)
+    url_html_text = response_url_html.text
+    html = bs(url_html_text, 'html.parser')
+
+    date = html.select_one('.gray03.p9.tah').text
+    comment_not_cleaned = html.select_one('.view_se').text
+    comment = comment_not_cleaned.replace("\n", "")
+    title_not_cleaned = html.select_one('.c.p15').text
+    title = title_not_cleaned.replace("#", "").replace("■", "").replace("[", "").replace("]", "")
+    goodcnt = html.select_one('.tah.p11.red01._goodCnt').text
+    badcnt = html.select_one('.tah.p11.blue01._badCnt').text
+
+
+    date_list.append(date)
+    comment_list.append(comment)
+    title_list.append(title)
+    goodcnt_list.append(goodcnt)
+    badcnt_list.append(badcnt)
+    url_list.append(url)
+
+df = pd.DataFrame()
+df['date'] = date_list
+df['title'] = title_list
+df['comment'] = comment_list
+df['good'] = goodcnt_list
+df['bad'] = badcnt_list
+df['url'] = url_list
+
+if(input_type == 1):
+    df.to_excel(f"data/{start_page}_to_{end_page}_bs.xlsx", index = False)
+elif(input_type == 2):    
+    df.to_csv(f"data/{start_page}_to_{end_page}_bs.csv", index = False, sep='\t')
+elif(input_type == 3):
+    df.to_csv(f"data/{start_page}_to_{end_page}_bs.txt", index = False, sep='\t')
+else:
+    print("전부생성")
+    df.to_csv(f"data/{start_page}_to_{end_page}_bs.txt", index = False, sep='\t')
+    df.to_csv(f"data/{start_page}_to_{end_page}_bs.csv", index = False, sep='\t')
+    df.to_excel(f"data/{start_page}_to_{end_page}_bs.xlsx", index = False)
+end_time = time.time()
+sec = (end_time - start_time)
+result_t = str(datetime.timedelta(seconds=sec)).split(".")
+print(f"시간 : {result_t[0]}")
+file = open("log.txt", "a", encoding="UTF-8")
+file.write(f"걸린 시간 : {result_t[0]}")
+file.close()
+
+time.sleep(1000)
+```
+
+</div>
+</details>
+
+<details><summary>Url_parser.py</summary>
+<div markdown = "1">
+
+```python
+import  requests
+from bs4 import BeautifulSoup as bs
+from tqdm import tqdm
+from fake_useragent import UserAgent
+ 
+def url_parser(min, max):
+    url_per_page_url = []
+    for t in tqdm(range(int(min), int(max + 1))):
+        url = f'https://finance.naver.com/item/board.naver?code=005930&page={t}'
+        user_agent = UserAgent()
+        if(t == 1):
+            headers = {
+                'User-Agent': user_agent.random
+            }
+        else:
+            headers = {
+                'Referer': f'https://finance.naver.com/item/board.naver?code=005930&page={t-1}',
+                'User-Agent' : user_agent.random
+                }
+        
+        response = requests.get(url = url, headers = headers)
+        #print(response) # 접속 확인 (200 = 성공)
+        html_text = response.text
+        html = bs(html_text, 'html.parser')
+        url_per_page = html.select('.title')
+        
+
+        for n in url_per_page:
+            url_per_page_url.append(n.a["href"])
+
+    return url_per_page_url
+```
+
+</div>
+</details>
+
+## 버전이 추가되었다. (2023-11-22)
+* 셀레니움버전
+* beautiful soap 버전
+
 
 ## 최종
 처음으로 목적을 가지고 프론트엔드에 대해 1도 못하던 내가 0부터 차근차근 쌓아가면서 이렇게 만들어낼 줄은 생각도 못했다. 이제 코드를 깨끗하게 정리해서 최종 코드를 올리고 마무리 하도록 하겠다.(2023-11-22)
